fix /inbox height on mobile
because vh includes browser chrome

--- a/ui/msg/css/_msg.scss
+++ b/ui/msg/css/_msg.scss
@@ -5,6 +5,7 @@ $msg-top-height: 4em;
 @import 'convo';
 
 body {
+  --app-height: 100vh;
   overflow: hidden;
 }
 
@@ -19,9 +20,9 @@ body {
 .msg-app {
   display: flex;
   flex-flow: row nowrap;
-  height: calc(100vh - var(--site-header-height));
+  height: calc(var(--app-height) - var(--site-header-height));
   @include breakpoint($mq-main-margin) {
-    height: calc(98.5vh - var(--site-header-height));
+    height: calc(var(--app-height) * 0.98 - var(--site-header-height));
   }
   overflow: hidden;
 
